# VFX-OpenCV

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp
